force-app/main/default/objects/PMC_DH_CommerceEntitlementSalesArea__c/PMC_DH_CommerceEntitlementSalesArea__c.object-meta.xml
<CustomObject>
    <description>This Object is used by Mosaic Direct to associate customer specific entitlement products to their corresponding sales area.</description>
    <label>Commerce Entitlement Sales Area</label>
    <nameField>
        <displayFormat>CES-{0000000000}</displayFormat>
        <label>CommerceEntSalesArea</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commerce Entitlement Sales Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>