force-app/main/default/objects/PMC_DH_CommerceEntitlementSalesArea__c/fields/PMC_DH_Account__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>AccountEntitlementProdSalesAreas</relationshipName>
    <type>Lookup</type>
</CustomField>