force-app/main/default/objects/PMC_DH_CommerceEntitlementSalesArea__c/fields/PMC_DH_Product__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>AccountEntitlementProdSalesAreas</relationshipName>
    <type>Lookup</type>
</CustomField>