force-app/main/default/objects/PMC_DH_CommerceEntitlementSalesArea__c/fields/PMC_DH_SalesArea__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_SalesArea__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Area</label>
    <referenceTo>PMC_SS_SalesArea__c</referenceTo>
    <relationshipName>AccountEntitlementProdSalesAreas</relationshipName>
    <type>Lookup</type>
</CustomField>