force-app/main/default/objects/PMC_DH_CommerceEntitlementSalesArea__c/fields/PMC_DH_SoldTo_SKU_SaleAreaId__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_SoldTo_SKU_SaleAreaId__c</fullName>
    <externalId>true</externalId>
    <label>SoldTo SKU SalesArea Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>