force-app/main/default/objects/PMC_DH_CommerceEntitlementSalesArea__c/fields/PMC_DH_UniqueCombinedKey__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_UniqueCombinedKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Combination of Account Number, Sales Area Division and Product SKU</description>
    <externalId>true</externalId>
    <label>Unique Combined Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>