force-app/main/default/objects/PMC_DH_CommerceEntitlementSalesArea__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PMC_DH_SalesArea__c</columns>
    <columns>PMC_DH_Product__c</columns>
    <columns>PMC_DH_Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>